Jupyter Notebook 템플릿 업데이트

--- a/notebooks/time_series_ann.ipynb
+++ b/notebooks/time_series_ann.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7556c99e",
+   "id": "e2cc7559",
    "metadata": {},
    "source": [
     "# 시계열 분석 - 인공신경망 모델 (ANN)\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "584110b2",
+   "id": "964ca839",
    "metadata": {},
    "source": [
     "## 1. 문제 정의 및 목표 설정\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec3fa26",
+   "id": "ff18a4bc",
    "metadata": {},
    "source": [
     "### 사용자 파라미터 설정\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "089535f2",
+   "id": "84b6d5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "DATE_COL = \"date\"                         # 날짜 컬럼명\n",
     "TARGET_COL = \"value\"                      # 예측할 타겟 컬럼명\n",
     "TRAIN_SIZE = 0.7                          # 훈련 데이터 비율\n",
-    "VALIDATION_SIZE = 0.15                    # 검증 데이터 비율\n",
+    "VALIDATION_SIZE = 0.1                     # 검증 데이터 비율 (7:1:2 분할)\n",
     "\n",
     "# 모델 파라미터\n",
     "WINDOW_SIZE = 7                           # 입력 윈도우 크기 (과거 며칠의 데이터로 예측할지)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bc47dd2",
+   "id": "9e039769",
    "metadata": {},
    "source": [
     "### 필요한 라이브러리 임포트\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72c196d5",
+   "id": "03f50500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +98,7 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
     "import tensorflow as tf\n",
     "# Keras를 독립 패키지로 사용\n",
     "import keras\n",
@@ -126,9 +127,8 @@
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "plt.rcParams['font.size'] = 12\n",
     "\n",
-    "# 결과 저장 디렉토리 생성\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "os.makedirs(DATA_OUTPUT_DIR, exist_ok=True)\n",
+    "# 결과 저장 디렉토리 생성 코드 제거\n",
+    "# 프로젝트 지침에 따라 필요 폴더는 이미 존재한다고 가정\n",
     "\n",
     "# # GPU 메모리 설정 (필요시 주석 해제 및 환경에 맞게 설정)\n",
     "# gpus = tf.config.experimental.list_physical_devices('GPU')\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf029d73",
+   "id": "bc6d63df",
    "metadata": {},
    "source": [
     "## 2. 데이터 탐색 및 전처리\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136fcd9a",
+   "id": "ba11f084",
    "metadata": {},
    "source": [
     "### 2.1 데이터 로드 및 기본 탐색\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b62bf15",
+   "id": "e949d4ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31dfa0f1",
+   "id": "8552c654",
    "metadata": {},
    "source": [
     "### 2.2 시계열 시각화 및 패턴 분석\n",
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddb19fd",
+   "id": "a067f1f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,20 +236,21 @@
     "print(\"\\n결측치 개수:\")\n",
     "print(df.isnull().sum())\n",
     "\n",
-    "if df.isnull().sum().sum() > 0:\n",
-    "    print(\"\\n결측치 처리 중...\")\n",
-    "    # 시계열 데이터이므로 보간 방법 사용\n",
-    "    df_clean = df.copy()\n",
-    "    df_clean = df_clean.interpolate(method='time')\n",
+    "# 시나리오 A: 결측치가 있는 경우 - 선형 보간법으로 처리\n",
+    "# 시계열의 연속성을 최대한 유지하면서 결측치를 채우는 방법\n",
+    "# 대부분의 시계열 분석에서 권장되는 기본 접근법\n",
+    "df_clean = df.copy()\n",
+    "df_clean = df_clean.interpolate(method='time')\n",
     "    \n",
-    "    # 시작/끝에 결측치가 남아있을 경우\n",
-    "    if df_clean.isnull().sum().sum() > 0:\n",
-    "        df_clean = df_clean.fillna(method='bfill').fillna(method='ffill')\n",
+    "# 시작/끝에 결측치가 남아있을 경우\n",
+    "if df_clean.isnull().sum().sum() > 0:\n",
+    "    df_clean = df_clean.fillna(method='bfill').fillna(method='ffill')\n",
     "    \n",
-    "    print(f\"결측치 처리 완료. 남은 결측치: {df_clean.isnull().sum().sum()}\")\n",
-    "else:\n",
-    "    df_clean = df.copy()\n",
-    "    print(\"결측치가 없습니다.\")\n",
+    "print(f\"결측치 처리 완료. 남은 결측치: {df_clean.isnull().sum().sum()}\")\n",
+    "\n",
+    "# 시나리오 B: 결측치가 없는 경우 (주석 처리됨)\n",
+    "# df_clean = df.copy()\n",
+    "# print(\"결측치가 없습니다.\")\n",
     "\n",
     "# 시계열 분석 - ACF, PACF\n",
     "plt.figure(figsize=(14, 7))\n",
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8605ca66",
+   "id": "916ca4c8",
    "metadata": {},
    "source": [
     "### 2.3 특성 엔지니어링 및 윈도우 생성\n",
@@ -295,13 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c8dcef",
+   "id": "af3884e0",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "# 특성 엔지니어링: 시간 관련 특성 추가\n",
+    "# 시나리오 A: 시간 관련 특성 추가 (DatetimeIndex가 있는 경우)\n",
+    "# 시간 정보에서 다양한 특성 추출하여 모델 성능 향상\n",
     "if isinstance(df_clean.index, pd.DatetimeIndex):\n",
     "    print(\"시간 관련 특성 추가 중...\")\n",
     "    # 원본 데이터 복사\n",
@@ -333,9 +335,9 @@
     "    df_features = df_features.dropna()\n",
     "    print(f\"특성 생성 완료. 최종 데이터 크기: {df_features.shape}\")\n",
     "else:\n",
-    "    print(\"DatetimeIndex가 없어 시간 관련 특성을 추가하지 않습니다.\")\n",
+    "    # 시나리오 B: DatetimeIndex가 없는 경우 (단순 시차 변수만 생성)\n",
+    "    print(\"DatetimeIndex가 없어 단순 시차 변수만 생성합니다.\")\n",
     "    \n",
-    "    # 단순 시차 변수만 생성\n",
     "    df_features = df_clean.copy()\n",
     "    for i in range(1, WINDOW_SIZE + 1):\n",
     "        df_features[f'lag_{i}'] = df_features[TARGET_COL].shift(i)\n",
@@ -363,7 +365,7 @@
     "val_size = int(len(X_scaled) * VALIDATION_SIZE)\n",
     "test_size = len(X_scaled) - train_size - val_size\n",
     "\n",
-    "# 훈련, 검증, 테스트 데이터 분할\n",
+    "# 훈련, 검증, 테스트 데이터 분할 (7:1:2 비율)\n",
     "X_train = X_scaled[:train_size]\n",
     "y_train = y_scaled[:train_size]\n",
     "\n",
@@ -373,9 +375,9 @@
     "X_test = X_scaled[train_size+val_size:]\n",
     "y_test = y_scaled[train_size+val_size:]\n",
     "\n",
-    "print(f\"훈련 데이터: X:{X_train.shape}, y:{y_train.shape}\")\n",
-    "print(f\"검증 데이터: X:{X_val.shape}, y:{y_val.shape}\")\n",
-    "print(f\"테스트 데이터: X:{X_test.shape}, y:{y_test.shape}\")\n",
+    "print(f\"훈련 데이터: X:{X_train.shape}, y:{y_train.shape} (70%)\")\n",
+    "print(f\"검증 데이터: X:{X_val.shape}, y:{y_val.shape} (10%)\")\n",
+    "print(f\"테스트 데이터: X:{X_test.shape}, y:{y_test.shape} (20%)\")\n",
     "\n",
     "# 데이터 분할 시각화 (원본 값 기준)\n",
     "original_dates = df_features.index\n",
@@ -384,10 +386,10 @@
     "test_dates = original_dates[train_size+val_size:]\n",
     "\n",
     "plt.figure(figsize=(14, 7))\n",
-    "plt.plot(train_dates, df_features.iloc[:train_size][TARGET_COL], label='훈련 데이터')\n",
-    "plt.plot(val_dates, df_features.iloc[train_size:train_size+val_size][TARGET_COL], label='검증 데이터')\n",
-    "plt.plot(test_dates, df_features.iloc[train_size+val_size:][TARGET_COL], label='테스트 데이터')\n",
-    "plt.title('데이터 분할')\n",
+    "plt.plot(train_dates, df_features.iloc[:train_size][TARGET_COL], label='훈련 데이터 (70%)')\n",
+    "plt.plot(val_dates, df_features.iloc[train_size:train_size+val_size][TARGET_COL], label='검증 데이터 (10%)')\n",
+    "plt.plot(test_dates, df_features.iloc[train_size+val_size:][TARGET_COL], label='테스트 데이터 (20%)')\n",
+    "plt.title('데이터 분할 (7:1:2 비율)')\n",
     "plt.xlabel('날짜')\n",
     "plt.ylabel(TARGET_COL)\n",
     "plt.legend()\n",
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a82d0fcd",
+   "id": "fce1551a",
    "metadata": {},
    "source": [
     "## 3. 모델 선택 및 구현\n",
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a82237b5",
+   "id": "be1d494e",
    "metadata": {},
    "source": [
     "### 3.1 인공신경망 모델 정의\n",
@@ -421,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49761955",
+   "id": "0f96852d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f3035b7",
+   "id": "96bd83df",
    "metadata": {},
    "source": [
     "### 3.2 모델 학습\n",
@@ -512,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ddfd065",
+   "id": "3be06014",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b1d5ab",
+   "id": "50f8deef",
    "metadata": {},
    "source": [
     "## 4. 모델 평가 및 비교\n",
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ed43df",
+   "id": "4ad91d7e",
    "metadata": {},
    "source": [
     "### 4.1 모델 평가 함수\n",
@@ -587,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c0884c",
+   "id": "c4cc1c3b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -664,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f87260af",
+   "id": "d1eb3cd1",
    "metadata": {},
    "source": [
     "### 4.2 모델 성능 평가\n",
@@ -674,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd928f90",
+   "id": "6aa69a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c695ec",
+   "id": "a16289f1",
    "metadata": {},
    "source": [
     "### 4.3 모델 비교\n",
@@ -721,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77720a86",
+   "id": "28a83ae5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +777,93 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9cd483",
+   "id": "c9ed1785",
+   "metadata": {},
+   "source": [
+    "### 4.4 시계열 교차 검증 (Time Series Cross-Validation)\n",
+    "본 분석에서는 기본적인 훈련/검증/테스트 분할 방식을 사용했습니다. 더 견고한 모델 평가를 위해 시계열 교차 검증을 추가로 수행합니다.\n",
+    "시계열 데이터에서는 일반적인 k-fold 교차 검증이 아닌, 시간적 의존성을 고려한 `TimeSeriesSplit`을 사용합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa932c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시계열 교차 검증 설정\n",
+    "print(\"\\n시계열 교차 검증 수행...\")\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "\n",
+    "# 스케일링된 전체 데이터\n",
+    "X_all = np.concatenate([X_train, X_val, X_test])\n",
+    "y_all = np.concatenate([y_train, y_val, y_test])\n",
+    "\n",
+    "# 최적 모델 구성 선택\n",
+    "best_model_config = ann_models[best_model_idx]['build_fn']\n",
+    "cv_scores = []\n",
+    "\n",
+    "# 교차 검증 시각화 준비\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "for i, (train_idx, test_idx) in enumerate(tscv.split(X_all)):\n",
+    "    # 훈련/테스트 분할\n",
+    "    X_cv_train, X_cv_test = X_all[train_idx], X_all[test_idx]\n",
+    "    y_cv_train, y_cv_test = y_all[train_idx], y_all[test_idx]\n",
+    "    \n",
+    "    # 모델 생성 및 학습\n",
+    "    cv_model = best_model_config(X_train.shape[1])\n",
+    "    cv_model.fit(\n",
+    "        X_cv_train, y_cv_train,\n",
+    "        epochs=EPOCHS // 2,  # 시간 단축을 위해 에포크 감소\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        verbose=0\n",
+    "    )\n",
+    "    \n",
+    "    # 예측 및 스케일 변환\n",
+    "    y_cv_pred = cv_model.predict(X_cv_test, verbose=0)\n",
+    "    \n",
+    "    # 원래 스케일로 변환\n",
+    "    y_cv_true_orig = scaler_y.inverse_transform(y_cv_test.reshape(-1, 1)).flatten()\n",
+    "    y_cv_pred_orig = scaler_y.inverse_transform(y_cv_pred).flatten()\n",
+    "    \n",
+    "    # 성능 평가\n",
+    "    cv_rmse = np.sqrt(mean_squared_error(y_cv_true_orig, y_cv_pred_orig))\n",
+    "    cv_scores.append(cv_rmse)\n",
+    "    \n",
+    "    # 시각화\n",
+    "    plt.subplot(5, 1, i+1)\n",
+    "    plt.plot(y_cv_true_orig[:40], label='실제값')  # 처음 40개 포인트만 표시\n",
+    "    plt.plot(y_cv_pred_orig[:40], label='예측값', alpha=0.7)\n",
+    "    plt.title(f'Fold {i+1} - RMSE: {cv_rmse:.4f}')\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    if i == 0:\n",
+    "        plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{OUTPUT_DIR}/ann_교차검증.png')\n",
+    "plt.show()\n",
+    "\n",
+    "# 교차 검증 결과 요약\n",
+    "print(f\"\\n교차 검증 결과 (5-fold TimeSeriesSplit):\")\n",
+    "print(f\"평균 RMSE: {np.mean(cv_scores):.4f}\")\n",
+    "print(f\"표준편차: {np.std(cv_scores):.4f}\")\n",
+    "print(f\"최소 RMSE: {np.min(cv_scores):.4f}\")\n",
+    "print(f\"최대 RMSE: {np.max(cv_scores):.4f}\")\n",
+    "\n",
+    "# 교차 검증 성능 분포 시각화\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.boxplot(cv_scores)\n",
+    "plt.title('교차 검증 RMSE 분포')\n",
+    "plt.ylabel('RMSE')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.savefig(f'{OUTPUT_DIR}/ann_교차검증_분포.png')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa313466",
    "metadata": {},
    "source": [
     "## 5. 결과 해석 및 인사이트 도출\n",
@@ -784,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce60b9e0",
+   "id": "9721aab0",
    "metadata": {},
    "source": [
     "### 5.1 미래 예측 시뮬레이션\n",
@@ -795,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec78543",
+   "id": "2722cdf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52019e4f",
+   "id": "e7cc7848",
    "metadata": {},
    "source": [
     "### 5.2 결론 및 인사이트\n",
@@ -885,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ece27c7",
+   "id": "37104b01",
    "metadata": {},
    "outputs": [],
    "source": [
