--- a/notebooks/time_series_lstm.ipynb
+++ b/notebooks/time_series_lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c364882",
+   "id": "09a58c39",
    "metadata": {},
    "source": [
     "# 시계열 분석 - LSTM 모델\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c732b09c",
+   "id": "5fe54571",
    "metadata": {},
    "source": [
     "## 1. 문제 정의 및 목표 설정\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fce4e2ad",
+   "id": "10c75d8f",
    "metadata": {},
    "source": [
     "### 사용자 파라미터 설정\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d6d1fae",
+   "id": "82f5bba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "DATE_COL = \"date\"                         # 날짜 컬럼명\n",
     "TARGET_COL = \"value\"                      # 예측할 타겟 컬럼명\n",
     "TRAIN_SIZE = 0.7                          # 훈련 데이터 비율\n",
-    "VALIDATION_SIZE = 0.15                    # 검증 데이터 비율\n",
+    "VALIDATION_SIZE = 0.1                     # 검증 데이터 비율 (7:1:2 분할)\n",
     "\n",
     "# 시퀀스 및 모델 파라미터\n",
     "SEQUENCE_LENGTH = 30                      # 시계열 시퀀스 길이 (과거 며칠의 데이터로 예측할지)\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bebe3e26",
+   "id": "56654ec7",
    "metadata": {},
    "source": [
     "### 필요한 라이브러리 임포트\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1a3faa",
+   "id": "1fd9eda4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,7 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
     "import tensorflow as tf\n",
     "# Keras를 독립 패키지로 사용\n",
     "import keras\n",
@@ -136,9 +137,8 @@
     "except:\n",
     "    print(\"'Malgun Gothic' 폰트가 없습니다. 기본 폰트를 사용합니다.\")\n",
     "\n",
-    "# 결과 저장 디렉토리 생성\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "os.makedirs(DATA_OUTPUT_DIR, exist_ok=True)\n",
+    "# 결과 저장 디렉토리 생성 코드 제거\n",
+    "# 프로젝트 지침에 따라 필요 폴더는 이미 존재한다고 가정\n",
     "\n",
     "# # GPU 메모리 설정 (주석 처리됨)\n",
     "# gpus = tf.config.experimental.list_physical_devices('GPU')\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8a232c",
+   "id": "cf8b97fb",
    "metadata": {},
    "source": [
     "## 2. 데이터 탐색 및 전처리\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bffef0",
+   "id": "0d28b044",
    "metadata": {},
    "source": [
     "### 2.1 데이터 로드 및 기본 탐색\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5630512d",
+   "id": "e6e26e3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f6cb44",
+   "id": "760add9d",
    "metadata": {},
    "source": [
     "### 2.2 결측치 및 이상치 처리\n",
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0024f607",
+   "id": "2f1ff07d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,35 +234,36 @@
     "print(\"\\n결측치 개수:\")\n",
     "print(df.isnull().sum())\n",
     "\n",
-    "# 결측치 처리\n",
-    "if df.isnull().sum().sum() > 0:\n",
-    "    print(\"\\n결측치 처리 중...\")\n",
-    "    # 시계열 데이터이므로 보간 방법 사용\n",
-    "    df_clean = df.copy()\n",
-    "    df_clean = df_clean.interpolate(method='time')\n",
-    "    \n",
-    "    # 시작/끝에 결측치가 남아있을 경우\n",
-    "    if df_clean.isnull().sum().sum() > 0:\n",
-    "        df_clean = df_clean.fillna(method='bfill').fillna(method='ffill')\n",
-    "    \n",
-    "    print(f\"결측치 처리 완료. 남은 결측치: {df_clean.isnull().sum().sum()}\")\n",
-    "else:\n",
-    "    df_clean = df.copy()\n",
-    "    print(\"결측치가 없습니다.\")\n",
+    "# 시나리오 A: 결측치가 있는 경우 - 시계열 보간법 적용\n",
+    "# 시계열 데이터이므로 시간 기반 보간 방법 사용\n",
+    "df_clean = df.copy()\n",
+    "df_clean = df_clean.interpolate(method='time')\n",
+    "\n",
+    "# 시작/끝에 결측치가 남아있을 경우\n",
+    "if df_clean.isnull().sum().sum() > 0:\n",
+    "    df_clean = df_clean.fillna(method='bfill').fillna(method='ffill')\n",
+    "\n",
+    "print(f\"결측치 처리 완료. 남은 결측치: {df_clean.isnull().sum().sum()}\")\n",
+    "\n",
+    "# 시나리오 B: 결측치가 없는 경우 (주석 처리됨)\n",
+    "# df_clean = df.copy()\n",
+    "# print(\"결측치가 없습니다.\")\n",
     "\n",
     "# 이상치 확인 (Z-점수 방법)\n",
     "print(\"\\n이상치 확인 중...\")\n",
     "z_scores = np.abs((df_clean[TARGET_COL] - df_clean[TARGET_COL].mean()) / df_clean[TARGET_COL].std())\n",
     "outliers = (z_scores > 3)\n",
+    "\n",
+    "# 시나리오 A: 이상치가 있는 경우 - 시각화 및 보존\n",
+    "# 시계열 예측에서는 이상치가 실제 중요한 패턴일 수 있으므로 확인만 하고 보존\n",
     "if outliers.any():\n",
     "    print(f\"Z-점수 방법으로 감지된 이상치 개수: {outliers.sum()}\")\n",
     "    \n",
     "    # 이상치 시각화\n",
     "    plt.figure(figsize=(14, 7))\n",
     "    plt.scatter(df_clean.index, df_clean[TARGET_COL], c='blue', alpha=0.5, label='정상 데이터')\n",
-    "    if outliers.any():\n",
-    "        plt.scatter(df_clean.index[outliers], df_clean.loc[outliers, TARGET_COL], \n",
-    "                   c='red', alpha=0.8, label='이상치')\n",
+    "    plt.scatter(df_clean.index[outliers], df_clean.loc[outliers, TARGET_COL], \n",
+    "               c='red', alpha=0.8, label='이상치')\n",
     "    plt.title('시계열 데이터 이상치')\n",
     "    plt.xlabel('날짜')\n",
     "    plt.ylabel(TARGET_COL)\n",
@@ -271,18 +272,24 @@
     "    plt.savefig(f'{OUTPUT_DIR}/lstm_이상치.png')\n",
     "    plt.show()\n",
     "    \n",
-    "    # 이상치 처리 (선택 사항)\n",
-    "    # 시계열 예측에서는 이상치가 실제 중요한 패턴일 수 있으므로 신중하게 처리\n",
-    "    # 심각한 이상치만 처리하거나 보존할 수 있음\n",
-    "    # df_clean.loc[outliers, TARGET_COL] = df_clean[TARGET_COL].mean()\n",
     "    print(\"이상치는 실제 데이터의 중요한 패턴일 수 있으므로 제거하지 않고 유지합니다.\")\n",
     "else:\n",
-    "    print(\"주요 이상치가 감지되지 않았습니다.\")"
+    "    print(\"주요 이상치가 감지되지 않았습니다.\")\n",
+    "\n",
+    "# 시나리오 B: 이상치 처리 - 평균값으로 대체 (주석 처리됨)\n",
+    "# 특정 상황에서는 이상치가 모델 성능에 부정적 영향을 줄 수 있어 처리가 필요할 수 있음\n",
+    "# if outliers.any():\n",
+    "#     print(f\"Z-점수 방법으로 감지된 이상치 개수: {outliers.sum()}\")\n",
+    "#     # 이상치를 평균값으로 대체\n",
+    "#     df_clean.loc[outliers, TARGET_COL] = df_clean[TARGET_COL].mean()\n",
+    "#     print(\"이상치를 평균값으로 대체했습니다.\")\n",
+    "# else:\n",
+    "#     print(\"주요 이상치가 감지되지 않았습니다.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8b65f08a",
+   "id": "b0205f72",
    "metadata": {},
    "source": [
     "### 2.3 시계열 시각화 및 패턴 분석\n",
@@ -297,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131c7685",
+   "id": "70cf7bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1176e55f",
+   "id": "f6a8b56f",
    "metadata": {},
    "source": [
     "### 2.4 특성 엔지니어링\n",
@@ -392,11 +399,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d86128",
+   "id": "3d6ec454",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 특성 엔지니어링: 시간 관련 특성 추가\n",
+    "# 시나리오 A: 시간 관련 특성과 시차/이동 특성 추가 (DatetimeIndex가 있는 경우)\n",
+    "# 목적: 다양한 특성을 모델에 제공하여 시간적 패턴 학습 강화\n",
     "if isinstance(df_clean.index, pd.DatetimeIndex):\n",
     "    print(\"시간 관련 특성 추가 중...\")\n",
     "    # 원본 데이터 복사\n",
@@ -436,14 +445,22 @@
     "    # 단순 시계열 모델링을 위해 단변량 데이터도 유지\n",
     "    df_univariate = df_clean[[TARGET_COL]].copy()\n",
     "else:\n",
-    "    print(\"DatetimeIndex가 없어 시간 관련 특성을 추가하지 않습니다.\")\n",
+    "    # 시나리오 B: DatetimeIndex가 없는 경우\n",
+    "    # 시간 기반 특성 없이 단변량 시계열로 처리\n",
+    "    print(\"DatetimeIndex가 없어 단변량 시계열로 처리합니다.\")\n",
     "    df_univariate = df_clean[[TARGET_COL]].copy()\n",
-    "    df_features = df_clean.copy()"
+    "    df_features = df_clean.copy()\n",
+    "\n",
+    "# 시나리오 C: 최소 특성만 사용 (주석 처리됨)\n",
+    "# 목적: 모델 복잡성 감소, 더 빠른 훈련 및 예측\n",
+    "# df_features = df_clean[[TARGET_COL]].copy()\n",
+    "# df_univariate = df_clean[[TARGET_COL]].copy()\n",
+    "# print(\"최소 특성 사용 (단변량 시계열)으로 진행합니다.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3774261a",
+   "id": "ba03cf3e",
    "metadata": {},
    "source": [
     "### 2.5 데이터 스케일링 및 시퀀스 생성\n",
@@ -456,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac87b387",
+   "id": "cf11bf5a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -518,7 +535,7 @@
     "val_end = train_size + val_size\n",
     "test_end = len(scaled_df)\n",
     "\n",
-    "# 훈련, 검증, 테스트 데이터 분할 - 전체 특성 데이터\n",
+    "# 훈련, 검증, 테스트 데이터 분할 - 전체 특성 데이터 (7:1:2 비율)\n",
     "train_data = scaled_df.values[:train_end]\n",
     "val_data = scaled_df.values[train_end:val_end]\n",
     "test_data = scaled_df.values[val_end:test_end]\n",
@@ -531,9 +548,9 @@
     "X_val, y_val = create_sequences(val_data, SEQUENCE_LENGTH, target_idx)\n",
     "X_test, y_test = create_sequences(test_data, SEQUENCE_LENGTH, target_idx)\n",
     "\n",
-    "print(f\"훈련 데이터 형태: {X_train.shape}, {y_train.shape}\")\n",
-    "print(f\"검증 데이터 형태: {X_val.shape}, {y_val.shape}\")\n",
-    "print(f\"테스트 데이터 형태: {X_test.shape}, {y_test.shape}\")\n",
+    "print(f\"훈련 데이터 형태: {X_train.shape}, {y_train.shape} (70%)\")\n",
+    "print(f\"검증 데이터 형태: {X_val.shape}, {y_val.shape} (10%)\")\n",
+    "print(f\"테스트 데이터 형태: {X_test.shape}, {y_test.shape} (20%)\")\n",
     "\n",
     "# 데이터 분할 시각화 - 원본 값 기준\n",
     "original_dates = df_clean.index\n",
@@ -542,10 +559,10 @@
     "test_dates = original_dates[val_end:test_end]\n",
     "\n",
     "plt.figure(figsize=(14, 7))\n",
-    "plt.plot(train_dates, df_clean.iloc[:train_end][TARGET_COL], label='훈련 데이터')\n",
-    "plt.plot(val_dates, df_clean.iloc[train_end:val_end][TARGET_COL], label='검증 데이터')\n",
-    "plt.plot(test_dates, df_clean.iloc[val_end:test_end][TARGET_COL], label='테스트 데이터')\n",
-    "plt.title('데이터 분할')\n",
+    "plt.plot(train_dates, df_clean.iloc[:train_end][TARGET_COL], label='훈련 데이터 (70%)')\n",
+    "plt.plot(val_dates, df_clean.iloc[train_end:val_end][TARGET_COL], label='검증 데이터 (10%)')\n",
+    "plt.plot(test_dates, df_clean.iloc[val_end:test_end][TARGET_COL], label='테스트 데이터 (20%)')\n",
+    "plt.title('데이터 분할 (7:1:2 비율)')\n",
     "plt.xlabel('날짜')\n",
     "plt.ylabel(TARGET_COL)\n",
     "plt.legend()\n",
@@ -556,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4231c28",
+   "id": "b6b2180d",
    "metadata": {},
    "source": [
     "## 3. 모델 선택 및 구현\n",
@@ -565,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57f7cac7",
+   "id": "766fb613",
    "metadata": {},
    "source": [
     "### 3.1 LSTM 모델 정의\n",
@@ -580,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5497516",
+   "id": "bb36af66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acb15ffd",
+   "id": "0b9444ce",
    "metadata": {},
    "source": [
     "### 3.2 모델 학습 및 평가 준비\n",
@@ -646,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c81bc18",
+   "id": "f33b2843",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -736,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "575676d4",
+   "id": "85f20e6e",
    "metadata": {},
    "source": [
     "### 3.3 모델 학습 및 평가\n",
@@ -753,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ec5ef3",
+   "id": "eb42104e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83da25c",
+   "id": "31720623",
    "metadata": {},
    "source": [
     "## 4. 모델 평가 및 비교\n",
@@ -847,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1965302c",
+   "id": "5ea46726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80fd58dd",
+   "id": "136ca92e",
    "metadata": {},
    "source": [
     "## 5. 결과 해석 및 인사이트 도출\n",
@@ -912,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b49faf",
+   "id": "495f6494",
    "metadata": {},
    "source": [
     "### 5.1 미래 예측 시뮬레이션\n",
@@ -928,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26161ea7",
+   "id": "de06c3dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65b82e36",
+   "id": "f4cfab36",
    "metadata": {},
    "source": [
     "### 5.2 결론 및 인사이트\n",
@@ -1038,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d95ec7",
+   "id": "07579e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,6 +1102,119 @@
     "print(\"5. 예측 불확실성 추정 방법 도입\")\n",
     "\n",
     "print(\"\\nLSTM 기반 시계열 분석 완료!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e30b124e",
+   "metadata": {},
+   "source": [
+    "## 6. 시계열 교차 검증 (Time Series Cross-Validation)\n",
+    "본 분석에서는 기본적인 훈련/검증/테스트 분할 방식을 사용했습니다. 더 견고한 모델 평가를 위해 시계열 교차 검증을 추가로 수행합니다.\n",
+    "시계열 데이터에서는 일반적인 k-fold 교차 검증이 아닌, 시간적 의존성을 고려한 `TimeSeriesSplit`을 사용합니다.\n",
+    "LSTM 모델은 계산 비용이 높아 간소화된 모델로 교차 검증을 수행합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4090076d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시계열 교차 검증 설정\n",
+    "print(\"\\n시계열 교차 검증 수행 중...\")\n",
+    "n_splits = 3  # LSTM은 계산 비용이 높으므로 fold 수를 줄임\n",
+    "tscv = TimeSeriesSplit(n_splits=n_splits)\n",
+    "\n",
+    "# 교차 검증을 위한 간소화된 모델 생성 함수\n",
+    "def build_simple_lstm_for_cv(input_shape):\n",
+    "    \"\"\"교차 검증용 간소화된 LSTM 모델\"\"\"\n",
+    "    model = Sequential([\n",
+    "        LSTM(32, input_shape=input_shape),\n",
+    "        Dropout(0.2),\n",
+    "        Dense(1)\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='mse')\n",
+    "    return model\n",
+    "\n",
+    "# 모든 데이터 (스케일링된)를 하나로 합치기\n",
+    "all_data = np.vstack([train_data, val_data, test_data])\n",
+    "\n",
+    "# 결과 저장\n",
+    "cv_rmse_scores = []\n",
+    "cv_mae_scores = []\n",
+    "\n",
+    "# 교차 검증 시각화 준비\n",
+    "plt.figure(figsize=(14, 10))\n",
+    "\n",
+    "# 각 폴드에 대해 학습 및 평가\n",
+    "for i, (train_idx, test_idx) in enumerate(tscv.split(all_data)):\n",
+    "    print(f\"\\nFold {i+1}/{n_splits} 처리 중...\")\n",
+    "    \n",
+    "    # 훈련/테스트 데이터 분할\n",
+    "    cv_train_data = all_data[train_idx]\n",
+    "    cv_test_data = all_data[test_idx]\n",
+    "    \n",
+    "    # 시퀀스 생성\n",
+    "    cv_X_train, cv_y_train = create_sequences(cv_train_data, SEQUENCE_LENGTH, target_idx)\n",
+    "    cv_X_test, cv_y_test = create_sequences(cv_test_data, SEQUENCE_LENGTH, target_idx)\n",
+    "    \n",
+    "    # 간소화된 모델 구축 및 학습\n",
+    "    cv_model = build_simple_lstm_for_cv(cv_X_train.shape[1:])\n",
+    "    cv_model.fit(\n",
+    "        cv_X_train, cv_y_train,\n",
+    "        epochs=20,  # 빠른 학습을 위해 에포크 감소\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        verbose=0\n",
+    "    )\n",
+    "    \n",
+    "    # 예측\n",
+    "    cv_y_pred = cv_model.predict(cv_X_test)\n",
+    "    \n",
+    "    # 원래 스케일로 변환 (스케일러를 이미 알고 있다고 가정)\n",
+    "    # 실제 구현에서는 각 분할마다 스케일러를 따로 생성해야 할 수 있음\n",
+    "    cv_y_test_orig = scaler.inverse_transform(np.hstack([cv_X_test[:, -1, :], cv_y_test.reshape(-1, 1)]))[:, -1]\n",
+    "    cv_y_pred_orig = scaler.inverse_transform(np.hstack([cv_X_test[:, -1, :], cv_y_pred.reshape(-1, 1)]))[:, -1]\n",
+    "    \n",
+    "    # 성능 평가\n",
+    "    cv_rmse = np.sqrt(mean_squared_error(cv_y_test_orig, cv_y_pred_orig))\n",
+    "    cv_mae = mean_absolute_error(cv_y_test_orig, cv_y_pred_orig)\n",
+    "    cv_rmse_scores.append(cv_rmse)\n",
+    "    cv_mae_scores.append(cv_mae)\n",
+    "    \n",
+    "    # 각 폴드의 결과 출력\n",
+    "    print(f\"Fold {i+1} - RMSE: {cv_rmse:.4f}, MAE: {cv_mae:.4f}\")\n",
+    "    \n",
+    "    # 시각화 (최대 30개 포인트만)\n",
+    "    plt.subplot(n_splits, 1, i+1)\n",
+    "    vis_limit = min(30, len(cv_y_test_orig))\n",
+    "    plt.plot(cv_y_test_orig[:vis_limit], label='실제값')\n",
+    "    plt.plot(cv_y_pred_orig[:vis_limit], label='예측값', linestyle='--')\n",
+    "    plt.title(f'Fold {i+1} - RMSE: {cv_rmse:.4f}')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{OUTPUT_DIR}/lstm_교차검증.png')\n",
+    "plt.show()\n",
+    "\n",
+    "# 교차 검증 결과 요약\n",
+    "print(\"\\n교차 검증 결과:\")\n",
+    "print(f\"평균 RMSE: {np.mean(cv_rmse_scores):.4f} (±{np.std(cv_rmse_scores):.4f})\")\n",
+    "print(f\"평균 MAE: {np.mean(cv_mae_scores):.4f} (±{np.std(cv_mae_scores):.4f})\")\n",
+    "\n",
+    "# 교차 검증 성능 시각화\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(range(len(cv_rmse_scores)), cv_rmse_scores, alpha=0.7, label='RMSE')\n",
+    "plt.bar(range(len(cv_mae_scores)), cv_mae_scores, alpha=0.5, label='MAE')\n",
+    "plt.xlabel('Fold')\n",
+    "plt.ylabel('오차')\n",
+    "plt.title('교차 검증 성능')\n",
+    "plt.legend()\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.savefig(f'{OUTPUT_DIR}/lstm_교차검증_성능.png')\n",
+    "plt.show()"
    ]
   }
  ],
