--- a/notebooks/time_series_ml.ipynb
+++ b/notebooks/time_series_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60f37ecc",
+   "id": "2467c593",
    "metadata": {},
    "source": [
     "# 시계열 머신러닝 모델링\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76ac8354",
+   "id": "95877a32",
    "metadata": {},
    "source": [
     "## 1. 사용자 입력 파라미터 설정\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58795a0f",
+   "id": "dd4b5037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,17 +80,12 @@
     "\n",
     "# 출력 경로\n",
     "OUTPUT_DIR = '../plots'\n",
-    "DATA_OUTPUT_DIR = '../data/processed'\n",
-    "\n",
-    "# 출력 디렉토리 생성\n",
-    "import os\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "os.makedirs(DATA_OUTPUT_DIR, exist_ok=True)"
+    "DATA_OUTPUT_DIR = '../data/processed'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e2fe8ab",
+   "id": "bac3b03d",
    "metadata": {},
    "source": [
     "## 2. 필요 라이브러리 임포트\n",
@@ -100,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8808ab20",
+   "id": "151c0934",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +115,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, TimeSeriesSplit\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from xgboost import XGBRegressor\n",
     "\n",
@@ -137,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4830b069",
+   "id": "ef23da8e",
    "metadata": {},
    "source": [
     "## 3. 데이터 로드 및 탐색\n",
@@ -148,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013c08c6",
+   "id": "732b598a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e8ad60",
+   "id": "23fad5db",
    "metadata": {},
    "source": [
     "## 4. 시계열 데이터 시각화\n",
@@ -187,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d12522",
+   "id": "7a6a85cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,14 +217,19 @@
     "missing_values = df[TARGET_COL].isnull().sum()\n",
     "print(f\"\\n{TARGET_COL} 결측치 개수: {missing_values}\")\n",
     "\n",
-    "if missing_values > 0:\n",
-    "    df[TARGET_COL] = df[TARGET_COL].interpolate(method='linear')\n",
-    "    print(f\"{TARGET_COL} 결측치를 선형 보간하여 처리했습니다.\")"
+    "# 시나리오 A: 결측치가 있는 경우 - 선형 보간법 적용\n",
+    "# 시계열의 연속성을 최대한 유지하면서 결측치를 채우는 방법으로, 대부분의 시계열 분석에서 권장됨\n",
+    "df[TARGET_COL] = df[TARGET_COL].interpolate(method='linear')\n",
+    "print(f\"{TARGET_COL} 결측치를 선형 보간하여 처리했습니다.\")\n",
+    "\n",
+    "# 시나리오 B: 결측치가 없는 경우 (주석 처리됨)\n",
+    "# 결측치가 없는 경우 추가 처리 없이 진행\n",
+    "# print(f\"{TARGET_COL}에 결측치가 없습니다. 추가 처리 없이 진행합니다.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7908c3e",
+   "id": "55fd4b88",
    "metadata": {},
    "source": [
     "## 5. 시계열 분해 및 정상성 검정\n",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1fe9d5a",
+   "id": "7d4d3da0",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a574ea4",
+   "id": "68d9520f",
    "metadata": {},
    "source": [
     "## 6. 특성 엔지니어링\n",
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1860a38a",
+   "id": "f9bd2f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,10 @@
     "    \n",
     "    return df_features\n",
     "\n",
-    "# 특성 데이터프레임 생성\n",
+    "# 특성 생성 시 사용할 기능들 선택\n",
+    "# 시나리오 A: 다양한 특성 조합 사용\n",
+    "# 목적: 최대한 많은 특성을 활용하여 모델의 성능을 향상시키는 경우\n",
+    "# 적용 상황: 충분한 데이터가 있고 모델이 과적합되지 않는 경우\n",
     "features_df = df.copy()\n",
     "\n",
     "# 날짜 특성 생성\n",
@@ -386,6 +389,16 @@
     "if USE_ROLLING_FEATURES:\n",
     "    features_df = create_rolling_features(features_df, TARGET_COL, ROLLING_WINDOWS)\n",
     "    print(\"이동 윈도우(rolling) 특성이 생성되었습니다.\")\n",
+    "\n",
+    "# 시나리오 B: 최소한의 특성만 사용 (주석 처리됨)\n",
+    "# 목적: 모델의 단순성과 해석력을 우선시하는 경우\n",
+    "# 적용 상황: 데이터가 제한적이거나 모델 복잡성을 줄이려는 경우\n",
+    "# features_df = df.copy()\n",
+    "# # 날짜 특성만 생성\n",
+    "# features_df = create_date_features(features_df)\n",
+    "# # 가장 중요한 시차 특성 1개만 생성\n",
+    "# features_df[f'lag_1'] = features_df[TARGET_COL].shift(1)\n",
+    "# print(\"최소한의 특성만 생성되었습니다: 날짜 특성 + 1일 시차 특성\")\n",
     "\n",
     "# 특성 및 타겟 변수 분리\n",
     "X = features_df.drop(TARGET_COL, axis=1)\n",
@@ -432,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f343463",
+   "id": "ebcd14e4",
    "metadata": {},
    "source": [
     "## 7. 데이터 분할 및 전처리\n",
@@ -443,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0e67f23",
+   "id": "d0f417fe",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -480,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7930c3fc",
+   "id": "92dea867",
    "metadata": {},
    "source": [
     "## 8. 모델 훈련 및 평가\n",
@@ -495,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e9666aa",
+   "id": "ac5af532",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b4c52f",
+   "id": "6bc0ecad",
    "metadata": {},
    "source": [
     "## 9. 모델 비교\n",
@@ -604,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "811113ff",
+   "id": "4bea8a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28d90d1",
+   "id": "2635b57c",
    "metadata": {},
    "source": [
     "## 10. 미래 예측\n",
@@ -706,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cfc5d01",
+   "id": "25093573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37fa6606",
+   "id": "ac05567b",
    "metadata": {},
    "source": [
     "## 11. 결론 및 인사이트\n",
@@ -815,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e07c17",
+   "id": "e129d1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +849,94 @@
     "    print(f\"   - 테스트 R²: {model_results[best_model_name]['test_r2']:.4f}\")\n",
     "    print(f\"   - 테스트 RMSE: {model_results[best_model_name]['test_rmse']:.4f}\")\n",
     "    \n",
-    "    print(\"\\n시계열 머신러닝 모델링이 완료되었습니다!\") "
+    "    print(\"\\n시계열 머신러닝 모델링이 완료되었습니다!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a216053d",
+   "metadata": {},
+   "source": [
+    "## 12. 시계열 교차 검증\n",
+    "모델의 일반화 성능을 더 정확하게 평가하기 위해 시계열 교차 검증(Time Series Cross-Validation)을 수행합니다.\n",
+    "이 방법은 미래 데이터로 과거를 예측하는 것을 방지하고, 시간적 구조를 유지하면서 여러 분할에서 모델을 평가합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815f9bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 시계열 교차 검증 설정\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "cv_scores = {'RMSE': [], 'MAE': [], 'R2': []}\n",
+    "\n",
+    "# 교차 검증에 사용할 모델 (XGBoost 예시)\n",
+    "cv_model = XGBRegressor(n_estimators=100, max_depth=5, learning_rate=0.1, random_state=RANDOM_STATE)\n",
+    "\n",
+    "# 교차 검증 수행\n",
+    "print(\"\\n===== 시계열 교차 검증 결과 =====\")\n",
+    "for i, (train_idx, test_idx) in enumerate(tscv.split(X)):\n",
+    "    # 훈련/테스트 데이터 분할\n",
+    "    X_cv_train, X_cv_test = X.iloc[train_idx], X.iloc[test_idx]\n",
+    "    y_cv_train, y_cv_test = y.iloc[train_idx], y.iloc[test_idx]\n",
+    "    \n",
+    "    # 스케일링\n",
+    "    scaler = StandardScaler()\n",
+    "    X_cv_train_scaled = scaler.fit_transform(X_cv_train)\n",
+    "    X_cv_test_scaled = scaler.transform(X_cv_test)\n",
+    "    \n",
+    "    # 모델 학습 및 예측\n",
+    "    cv_model.fit(X_cv_train_scaled, y_cv_train)\n",
+    "    y_cv_pred = cv_model.predict(X_cv_test_scaled)\n",
+    "    \n",
+    "    # 성능 평가\n",
+    "    cv_rmse = np.sqrt(mean_squared_error(y_cv_test, y_cv_pred))\n",
+    "    cv_mae = mean_absolute_error(y_cv_test, y_cv_pred)\n",
+    "    cv_r2 = r2_score(y_cv_test, y_cv_pred)\n",
+    "    \n",
+    "    cv_scores['RMSE'].append(cv_rmse)\n",
+    "    cv_scores['MAE'].append(cv_mae)\n",
+    "    cv_scores['R2'].append(cv_r2)\n",
+    "    \n",
+    "    print(f\"Fold {i+1}: RMSE={cv_rmse:.4f}, MAE={cv_mae:.4f}, R²={cv_r2:.4f}\")\n",
+    "\n",
+    "# 평균 교차 검증 점수\n",
+    "print(\"\\n평균 교차 검증 성능:\")\n",
+    "print(f\"RMSE: {np.mean(cv_scores['RMSE']):.4f} ± {np.std(cv_scores['RMSE']):.4f}\")\n",
+    "print(f\"MAE: {np.mean(cv_scores['MAE']):.4f} ± {np.std(cv_scores['MAE']):.4f}\")\n",
+    "print(f\"R²: {np.mean(cv_scores['R2']):.4f} ± {np.std(cv_scores['R2']):.4f}\")\n",
+    "\n",
+    "# 교차 검증 시각화\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "for metric, scores in cv_scores.items():\n",
+    "    plt.plot(range(1, len(scores)+1), scores, marker='o', label=metric)\n",
+    "plt.title('시계열 교차 검증 점수')\n",
+    "plt.xlabel('Fold')\n",
+    "plt.ylabel('점수')\n",
+    "plt.legend()\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'{OUTPUT_DIR}/ml_교차검증결과.png')\n",
+    "plt.show()\n",
+    "\n",
+    "# 특성 중요도 시각화 (XGBoost 모델 기준)\n",
+    "if 'XGBoost' in model_results:\n",
+    "    xgb_model = model_results['XGBoost']['model']\n",
+    "    feature_importance = pd.DataFrame({\n",
+    "        'feature': X.columns,\n",
+    "        'importance': xgb_model.feature_importances_\n",
+    "    }).sort_values('importance', ascending=False)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 8))\n",
+    "    sns.barplot(x='importance', y='feature', data=feature_importance.head(20))\n",
+    "    plt.title('XGBoost 모델 - 상위 20개 특성 중요도')\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{OUTPUT_DIR}/ml_XGBoost_특성중요도.png')\n",
+    "    plt.show()"
    ]
   }
  ],
