--- a/notebooks/time_series_classification.ipynb
+++ b/notebooks/time_series_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36e2436d",
+   "id": "c949828c",
    "metadata": {},
    "source": [
     "# 시계열 분류 모델링\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d38191c",
+   "id": "7ae87a91",
    "metadata": {},
    "source": [
     "## 1. 사용자 입력 파라미터 설정\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a842552c",
+   "id": "5c11ac6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +67,17 @@
     "# 모델 파라미터\n",
     "MODELS = [\"RF\", \"XGB\", \"SVM\"]         # 사용할 모델들 (RF: RandomForest, XGB: XGBoost, SVM: Support Vector Machine)\n",
     "TRAIN_SIZE = 0.7                       # 훈련 데이터 비율\n",
-    "VALIDATION_SIZE = 0.15                 # 검증 데이터 비율 (나머지는 테스트 데이터)\n",
+    "VALIDATION_SIZE = 0.1                  # 검증 데이터 비율 (7:1:2 분할)\n",
     "RANDOM_STATE = 42                      # 랜덤 시드\n",
     "\n",
     "# 출력 경로\n",
     "OUTPUT_DIR = '../plots'          # 시각화 결과 저장 경로\n",
-    "DATA_OUTPUT_DIR = '../data/processed' # 전처리된 데이터 저장 경로\n",
-    "\n",
-    "# 출력 디렉토리 생성\n",
-    "import os\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "os.makedirs(DATA_OUTPUT_DIR, exist_ok=True)"
+    "DATA_OUTPUT_DIR = '../data/processed' # 전처리된 데이터 저장 경로"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b70e628",
+   "id": "e3e93ff0",
    "metadata": {},
    "source": [
     "## 2. 필요 라이브러리 임포트\n",
@@ -92,22 +87,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f26e1c",
+   "id": "3a676e78",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 기본 라이브러리\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "# 시각화 라이브러리\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import warnings\n",
+    "\n",
+    "# 데이터 처리 및 변환 라이브러리\n",
     "from scipy import stats\n",
     "from scipy.fft import fft\n",
     "\n",
     "# 머신러닝 라이브러리\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, TimeSeriesSplit\n",
     "from sklearn.metrics import (classification_report, confusion_matrix, \n",
     "                           accuracy_score, precision_score, recall_score, f1_score,\n",
     "                           roc_curve, auc, roc_auc_score)\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa39e729",
+   "id": "88fd5e67",
    "metadata": {},
    "source": [
     "## 3. 데이터 로드 및 탐색\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a63bc5",
+   "id": "75981d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "568d60f8",
+   "id": "f4c43866",
    "metadata": {},
    "source": [
     "## 4. 타겟 변수 탐색\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6072442d",
+   "id": "b62a060b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +215,20 @@
     "plt.show()\n",
     "\n",
     "# 타겟 변수가 범주형이 아닌 경우, 레이블 인코딩\n",
+    "# 시나리오 A: 타겟 변수가 문자열 또는 범주형인 경우 - 레이블 인코딩 적용\n",
     "if df[TARGET_COL].dtype not in ['int64', 'int32', 'uint8', 'bool']:\n",
     "    print(f\"\\n타겟 변수({TARGET_COL})가 범주형이 아닌 것으로 판단됩니다. 레이블 인코딩을 수행합니다.\")\n",
     "    label_encoder = LabelEncoder()\n",
     "    df[TARGET_COL] = label_encoder.fit_transform(df[TARGET_COL])\n",
-    "    print(f\"레이블 인코딩 결과: {dict(zip(label_encoder.classes_, range(len(label_encoder.classes_))))}\")"
+    "    print(f\"레이블 인코딩 결과: {dict(zip(label_encoder.classes_, range(len(label_encoder.classes_))))}\")\n",
+    "\n",
+    "# 시나리오 B: 타겟 변수가 이미 숫자형인 경우 (주석 처리됨)\n",
+    "# print(f\"\\n타겟 변수({TARGET_COL})가 이미 숫자형입니다. 별도의 인코딩이 필요하지 않습니다.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e05a9d56",
+   "id": "e0e4b1d5",
    "metadata": {},
    "source": [
     "## 5. 특성 변수 탐색\n",
@@ -237,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e5936c",
+   "id": "3019b59e",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -285,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e60317",
+   "id": "cb6ad8ae",
    "metadata": {},
    "source": [
     "## 6. 특성 엔지니어링\n",
@@ -300,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb668ad5",
+   "id": "b4427429",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -405,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd8c6a6",
+   "id": "bee0f30b",
    "metadata": {},
    "source": [
     "## 7. 특성 집합 생성\n",
@@ -416,11 +420,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e172c4d",
+   "id": "9c6348bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(\"윈도우 기반 특성 집합을 생성합니다...\")\n",
+    "\n",
+    "# 시나리오 A: 모든 특성 유형 사용\n",
+    "# 목적: 통계적 특성, 주파수 특성, 시차 특성을 모두 활용하여 최대한의 정보 추출\n",
     "features_df = create_feature_set(\n",
     "    df, features, WINDOW_SIZE, TARGET_COL,\n",
     "    use_statistical=USE_STATISTICAL_FEATURES,\n",
@@ -428,6 +435,26 @@
     "    use_lag=USE_LAG_FEATURES,\n",
     "    lag_values=LAG_VALUES\n",
     ")\n",
+    "\n",
+    "# 시나리오 B: 통계적 특성만 사용 (주석 처리됨)\n",
+    "# 목적: 모델 단순화 및 빠른 학습, 과적합 방지\n",
+    "# features_df = create_feature_set(\n",
+    "#     df, features, WINDOW_SIZE, TARGET_COL,\n",
+    "#     use_statistical=True,\n",
+    "#     use_frequency=False,\n",
+    "#     use_lag=False,\n",
+    "#     lag_values=None\n",
+    "# )\n",
+    "\n",
+    "# 시나리오 C: 시차 특성만 사용 (주석 처리됨)\n",
+    "# 목적: 시간적 의존성에 집중, 해석 가능성 향상\n",
+    "# features_df = create_feature_set(\n",
+    "#     df, features, WINDOW_SIZE, TARGET_COL,\n",
+    "#     use_statistical=False,\n",
+    "#     use_frequency=False,\n",
+    "#     use_lag=True,\n",
+    "#     lag_values=[1, 2, 3, 4, 5]\n",
+    "# )\n",
     "\n",
     "print(f\"생성된 특성 집합 형태: {features_df.shape}\")\n",
     "print(\"\\n생성된 특성 목록 (처음 10개):\")\n",
@@ -446,14 +473,25 @@
     "if missing_values.sum() > 0:\n",
     "    print(\"\\n결측치가 있는 특성 수:\", (missing_values > 0).sum())\n",
     "    \n",
-    "    # 결측치 처리 (평균으로 대체)\n",
+    "    # 시나리오 A: 결측치를 평균값으로 대체\n",
+    "    # 이유: 단순하고 효과적인 방법으로, 분포의 중심 경향성을 유지함\n",
     "    features_df = features_df.fillna(features_df.mean())\n",
-    "    print(\"결측치를 평균값으로 대체했습니다.\")"
+    "    print(\"결측치를 평균값으로 대체했습니다.\")\n",
+    "\n",
+    "# 시나리오 B: 결측치를 중앙값으로 대체 (주석 처리됨)\n",
+    "# 이유: 이상치에 덜 민감한 방법으로, 왜곡된 분포에 적합함\n",
+    "# features_df = features_df.fillna(features_df.median())\n",
+    "# print(\"결측치를 중앙값으로 대체했습니다.\")\n",
+    "\n",
+    "# 시나리오 C: 결측치가 있는 행 제거 (주석 처리됨)\n",
+    "# 이유: 결측치가 많지 않을 때 사용할 수 있는 가장 단순한 방법\n",
+    "# features_df = features_df.dropna()\n",
+    "# print(\"결측치가 있는 행을 제거했습니다. 남은 행 수:\", features_df.shape[0])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35e9401e",
+   "id": "cfd1f557",
    "metadata": {},
    "source": [
     "## 8. 데이터 분할 및 전처리\n",
@@ -466,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92559825",
+   "id": "7d3ebbb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,10 +522,10 @@
     "    random_state=RANDOM_STATE\n",
     ")\n",
     "\n",
-    "print(f\"데이터 분할 완료:\")\n",
-    "print(f\"- 훈련 데이터: {X_train.shape}\")\n",
-    "print(f\"- 검증 데이터: {X_val.shape}\")\n",
-    "print(f\"- 테스트 데이터: {X_test.shape}\")\n",
+    "print(f\"데이터 분할 완료 (7:1:2 비율):\")\n",
+    "print(f\"- 훈련 데이터: {X_train.shape} (70%)\")\n",
+    "print(f\"- 검증 데이터: {X_val.shape} (10%)\")\n",
+    "print(f\"- 테스트 데이터: {X_test.shape} (20%)\")\n",
     "\n",
     "# 특성 스케일링\n",
     "scaler = StandardScaler()\n",
@@ -515,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d336bc5f",
+   "id": "87a36c08",
    "metadata": {},
    "source": [
     "## 9. 모델 훈련 및 평가\n",
@@ -529,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85a364bf",
+   "id": "cd4cc17b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,10 +716,109 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4de1e00",
+   "id": "7c2ff2c4",
    "metadata": {},
    "source": [
-    "## 10. 결론 및 인사이트\n",
+    "## 10. 시계열 교차 검증 (Time Series Cross-Validation)\n",
+    "이 섹션은 프로젝트 지침에 따라 시계열 데이터 특성을 고려한 시계열 교차 검증을 수행합니다.\n",
+    "일반적인 교차 검증과 달리, 시계열 데이터에서는 미래의 데이터로 과거를 예측하는 시간적 리크(temporal leakage)를 방지하기 위해 \n",
+    "`TimeSeriesSplit`을 사용하여 시간 순서를 유지하면서 교차 검증을 수행합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9624691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 최적 모델에 대한 시계열 교차 검증\n",
+    "if 'best_model' in locals():\n",
+    "    print(\"\\n시계열 교차 검증 수행 중...\")\n",
+    "    \n",
+    "    # 시계열 교차 검증 설정\n",
+    "    tscv = TimeSeriesSplit(n_splits=5)\n",
+    "    cv_scores = []\n",
+    "    \n",
+    "    # 모든 데이터를 합침 (시간 순서가 중요하므로 원본 순서 유지)\n",
+    "    X_combined = pd.concat([pd.DataFrame(X_train_scaled), \n",
+    "                           pd.DataFrame(X_val_scaled), \n",
+    "                           pd.DataFrame(X_test_scaled)])\n",
+    "    y_combined = pd.concat([pd.Series(y_train), pd.Series(y_val), pd.Series(y_test)])\n",
+    "    \n",
+    "    # 교차 검증 시각화 준비\n",
+    "    plt.figure(figsize=(14, 10))\n",
+    "    \n",
+    "    # 각 폴드에 대해 학습 및 평가\n",
+    "    for i, (train_idx, test_idx) in enumerate(tscv.split(X_combined)):\n",
+    "        fold_X_train, fold_X_test = X_combined.iloc[train_idx], X_combined.iloc[test_idx]\n",
+    "        fold_y_train, fold_y_test = y_combined.iloc[train_idx], y_combined.iloc[test_idx]\n",
+    "        \n",
+    "        # 모델 클론 생성 및 학습\n",
+    "        cv_model = type(best_model)(**best_model.get_params())\n",
+    "        cv_model.fit(fold_X_train, fold_y_train)\n",
+    "        \n",
+    "        # 예측 및 평가\n",
+    "        fold_y_pred = cv_model.predict(fold_X_test)\n",
+    "        fold_accuracy = accuracy_score(fold_y_test, fold_y_pred)\n",
+    "        fold_f1 = f1_score(fold_y_test, fold_y_pred, average='weighted')\n",
+    "        cv_scores.append(fold_f1)\n",
+    "        \n",
+    "        # 혼동 행렬\n",
+    "        plt.subplot(3, 2, i+1)\n",
+    "        cm = confusion_matrix(fold_y_test, fold_y_pred)\n",
+    "        sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+    "        plt.title(f'Fold {i+1}: F1 = {fold_f1:.4f}, Accuracy = {fold_accuracy:.4f}')\n",
+    "        plt.xlabel('예측 클래스')\n",
+    "        plt.ylabel('실제 클래스')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{OUTPUT_DIR}/class_교차검증_혼동행렬.png')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # 교차 검증 결과 분석\n",
+    "    mean_cv_f1 = np.mean(cv_scores)\n",
+    "    std_cv_f1 = np.std(cv_scores)\n",
+    "    \n",
+    "    print(f\"\\n시계열 교차 검증 결과 (5-fold TimeSeriesSplit):\")\n",
+    "    print(f\"- 평균 F1 점수: {mean_cv_f1:.4f} (±{std_cv_f1:.4f})\")\n",
+    "    print(f\"- 개별 폴드 F1 점수: {[f'{s:.4f}' for s in cv_scores]}\")\n",
+    "    \n",
+    "    # 시계열 교차 검증 F1 점수 시각화\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(range(1, len(cv_scores)+1), cv_scores, marker='o', linestyle='-')\n",
+    "    plt.axhline(y=mean_cv_f1, color='r', linestyle='--', label=f'평균 F1 = {mean_cv_f1:.4f}')\n",
+    "    plt.fill_between(range(1, len(cv_scores)+1), \n",
+    "                    [mean_cv_f1 - std_cv_f1] * len(cv_scores),\n",
+    "                    [mean_cv_f1 + std_cv_f1] * len(cv_scores), \n",
+    "                    alpha=0.2, color='r')\n",
+    "    plt.xlabel('폴드')\n",
+    "    plt.ylabel('F1 점수')\n",
+    "    plt.title('시계열 교차 검증 - F1 점수')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    plt.xticks(range(1, len(cv_scores)+1))\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'{OUTPUT_DIR}/class_교차검증_F1점수.png')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # 모델 안정성 평가\n",
+    "    if mean_cv_f1 < test_f1 - 0.1:\n",
+    "        print(\"\\n주의: 교차 검증 F1 점수가 테스트 F1 점수보다 낮습니다.\")\n",
+    "        print(\"이는 모델이 데이터의 특정 부분에 과적합되었거나, 시간에 따른 데이터 분포 변화(concept drift)가 있을 수 있음을 시사합니다.\")\n",
+    "    elif std_cv_f1 > 0.1:\n",
+    "        print(\"\\n주의: 교차 검증 F1 점수의 표준편차가 큽니다.\")\n",
+    "        print(\"이는 모델 성능이 시간에 따라 불안정할 수 있음을 시사합니다.\")\n",
+    "    else:\n",
+    "        print(\"\\n교차 검증 결과, 모델이 시간에 따른 데이터 변화에 비교적 안정적인 성능을 보이고 있습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "645a8ef8",
+   "metadata": {},
+   "source": [
+    "## 11. 결론 및 인사이트\n",
     "전체 시계열 분류 모델링 과정과 최종 결과를 요약합니다.\n",
     "데이터 정보, 사용된 특성 수, 각 모델의 검증 성능, 최적 모델의 최종 테스트 성능 등을 제시하고 분석에 대한 결론과 인사이트를 정리합니다."
    ]
@@ -689,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08449c8c",
+   "id": "86d89140",
    "metadata": {},
    "outputs": [],
    "source": [
